test_suite/tests/ui/integer/sanitize/unknown.stderr
error: Unknown sanitizer `convert_to_euro`
 --> tests/ui/integer/sanitize/unknown.rs:3:19
  |
3 | #[nutype(sanitize(convert_to_euro))]
  |                   ^^^^^^^^^^^^^^^
